<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvItmTitle"
        android:background="#535050"
        android:hint="@string/etTitle"
        android:layout_weight="0.47" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etWhen"
        android:hint="@string/etWhen"
        android:background="#797676"
        android:layout_weight="0.63" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="426dp"
        android:weightSum="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvAddress"
            android:hint="@string/tvAddress"
            android:text="@string/Address"
            android:background="#e38b8686"
            android:layout_weight="0.06" />

        <ImageButton
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnItmCall"
            android:layout_gravity="right"
            android:src="@android:drawable/ic_menu_call"
            android:layout_weight="0.10"
            android:background="#5b132a" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rtbltmPriority"
            android:layout_gravity="center_horizontal"
            android:background="#6d7480" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New CheckBox"
            android:id="@+id/ChDone"
            android:layout_gravity="right"
            android:layout_weight="0.06"
            android:checked="false"
            android:hint="@string/ChDone" />

    </LinearLayout>

</LinearLayout>